--- a/CSS/common.css
+++ b/CSS/common.css
@@ -99,6 +99,7 @@ img {
 .nav {
 	display: flex;
 	align-items: center;
+	
 }
 
 
@@ -254,8 +255,24 @@ img {
 
 /*преимущество*/
 
+.advantages-icon {
+	width: 270px;
+	height: 120px;
 
-.section {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 30px;
+		background: #F5F4FA;
+		border-radius: 4px;
+}
+
+.social-network-svg {
+	width: 20px;
+	height: 20px;
+}
+
+.section-advantages {
 	padding-top: 94px;
 	padding-bottom: 94px;
 }
@@ -263,7 +280,6 @@ img {
 .advantages {
 	display: flex;
 	justify-content: space-between;
-	align-items:
 }
 
 .advantages-item {
@@ -418,8 +434,13 @@ img {
 
 /*porfolio*/
 
+.section-filter{
+	padding-top: 94px;
+	padding-bottom: 94px;
+}
 
 .filter-list {
+
 	display: flex;
 	justify-content: center;
 	margin-bottom: 50px;
@@ -434,21 +455,41 @@ img {
 */
 
 
-
-
 .cards {
 	display: flex;
 	flex-wrap: wrap;
+	gap: 30px;
+/*
 	margin-left: -30px;
-	margin-top: -30px;
+	margin-top: -30px;*/
+
+	background-color:aqua;
 }
 
 .cards-item {
-	flex-basis: calc(100% / 3 - 30px);
-	margin-left: 30px;
-	margin-top: 30px;
+flex-basis: calc((100% - 60px) / 3);
+
+/*
+margin-right: 30px;
+margin-bottom: 30px;
+width: 370px;
+*/
 }
 
+
+/*
+.cards-item:nth-child(3n+3) {
+	margin-right: 0;
+}
+
+
+.cards-item:nth-child(n+3) {
+	margin-bottom: 0;
+}
+
+.cards-item:not( :nth-child(n+3)) {
+	margin-bottom: 30;
+}*/
 
 .cards-content {
 	padding: 20px 24px;
