--- a/CSS/common.css
+++ b/CSS/common.css
@@ -2,7 +2,7 @@
 	--primary-text-color: #757575;
 	--title-text-color: #212121;
 	--accent-color: #2196F3;
-	--white: #ffffff
+	--white: #ffffff;
 	--svg-color: #afb1b8;
 }
 
@@ -51,6 +51,7 @@ img {
 	width: 1200px;
 		padding-left: 15px;
 		padding-right: 15px;
+
 }
 
 /*#212121 основной текст*/
@@ -141,23 +142,6 @@ img {
 
 .auth-nav-item:not(:last-child) {
 	margin-right: 50px;
-}
-
-.auth-nav .link {
-	color: var(--primary-text-color);
-	text-decoration: none;
-
-	display: block;
-
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 1.14;
-	letter-spacing: 0.02em;
-}
-
-.auth-nav .link:hover,
-.auth-nav .link:focus {
-	color: var(--accent-color);
 }
 
 .auth-nav .tel-link:not(:last-child) {
@@ -293,10 +277,12 @@ img {
 .section-advantages {
 	padding-top: 94px;
 	padding-bottom: 94px;
+	
 }
 
 .advantages {
 	display: flex;
+	background-color: aqua;
 }
 
 .advantages-item {
@@ -341,6 +327,7 @@ img {
 }
 
 .examples-list {
+	background-color: aqua;
 	display: flex;
 
 }
@@ -353,21 +340,22 @@ img {
 
 .comandos {
 	background: #F5F4FA;
-	padding-top: 90px;
-	padding-bottom : 128px;
+	padding-top: 94px;
+	padding-bottom : 94px;
 }
 
 
 .comandos-list {
 	display: flex;
 	flex-wrap: wrap;
-	margin-left: -30px;
+	gap: 30px;
+			background-color: aqua;
 
 }
 
 .comandos-box {
 	flex-basis: calc(100% / 4 - 30);
-	margin-left: 30px;
+
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
@@ -393,6 +381,99 @@ img {
 
 	font-size: 16px;
 	line-height: 1.18;
+	margin-bottom: 16px;
+}
+
+
+.social-network-list {
+display: inline-flex;
+
+background-color: aqua;
+}
+
+
+.social-network-item {
+padding: 0;
+}
+.social-network-item:not(:last-child) {
+	margin-right: 10px;
+}
+
+.social-network-link {
+	display: flex;
+	
+		justify-content: center;
+		align-items: center;
+		width: 44px;
+		height: 44px;
+		border-radius: 50%;
+		fill: var(--svg-color)
+} 
+
+.social-network-link:hover,
+.social-network-link:focus {
+	fill: var(--white);
+	background-color: var(--accent-color);
+}
+
+
+.social-network-svg {
+	width: 20px;
+	height: 20px;
+}
+
+
+/*client*/
+
+
+.section-client {
+	padding-top: 94px;
+	padding-bottom: 94px;
+}
+
+.client-title {
+font-weight: 700;
+	font-size: 36px;
+	line-height: 1.16;
+	text-align: center;
+	margin-bottom: 50px;
+	color: var(--title-text-color);
+}
+
+
+.client-list {
+	display: flex;
+	justify-content: center;
+	gap: 30px;
+}
+
+
+.client-item{
+
+}
+
+
+.client-link {
+		width: 170px;
+		height: 92px;
+display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid var(--svg-color);
+	border-radius: 4px;
+	fill: var(--svg-color);
+
+}
+
+.client-link:hover,
+.client-link:focus {
+	border: 1px solid var(--accent-color);
+	fill: var(--accent-color);
+}
+
+.client-svg {
+		width: 106px;
+		height: 47px;
 }
 
 
@@ -401,9 +482,16 @@ img {
 
 .footer {
 	background-color: #2F303A;
-	padding-top: 58px;
-	padding-bottom: 62px;
+	padding-top: 60px;
+	padding-bottom: 60px;
+	
 }
+
+.address {
+	display: inline-flex;
+}
+
+
 
 
 .footer-logo {
@@ -411,18 +499,17 @@ img {
 		margin-bottom: 20px;
 
 	color: var(--white);
-	font-family: Raleway, sans-serif;
+	font-family: Raleway,sans-serif;
 	text-decoration: none;
+	font-style: normal;
 
 	font-weight: 700;
 	font-size: 26px;
-	line-height: 1.1;
+	line-height: 1.2;
 }
 
 
-.address {
 
-}
 
 
 .footer-contacts.city {
@@ -447,6 +534,59 @@ img {
 .footer-contacts:focus {
 	color: var(--accent-color);
 }
+
+
+
+.join {
+	display: inline-flex;
+		flex-direction: column;
+		margin-left: 70px;
+		align-content: flex-start;
+}
+
+
+.join-title {
+	display: inline-flex;
+	
+		margin-bottom: 20px;
+		font-weight: 700;
+		font-size: 14px;
+		line-height: 1.14;
+		text-transform: uppercase;
+		color: var(--white);
+}
+
+
+.join-list {
+	display: flex;
+	gap: 10px;
+
+}
+
+.join-item {
+	display: inline-flex;
+}
+
+.join-link {
+	text-align: center;
+	padding: 12px;
+	width: 44px;
+	height: 44px;
+	background: rgba(255, 255, 255, 0.1);
+	border-radius: 50%;
+}
+
+.join-link:hover,
+.join-link:focus {
+	background: var(--accent-color);
+}
+
+.join-svg {
+	width: 20px;
+	height: 20px;
+	fill: var(--white);
+}
+
 
 
 /*porfolio*/
