--- a/CSS/common.css
+++ b/CSS/common.css
@@ -32,6 +32,11 @@ p {
 	padding: 0px;
 }
 
+
+.link {
+	display: block;
+}
+
 img {
 	display: block;
 	max-width: 100%;
@@ -319,9 +324,11 @@ img {
 	padding-bottom: 94px;
 }
 
-.examples-title {
+.page-title {
 	color: var(--title-text-color);
-
+		font-weight: 700;
+			font-size: 36px;
+			line-height: 1.16;
 	text-align: center;
 	margin-bottom: 50px;
 }
@@ -431,38 +438,28 @@ padding: 0;
 	padding-bottom: 94px;
 }
 
-.client-title {
-font-weight: 700;
-	font-size: 36px;
-	line-height: 1.16;
-	text-align: center;
-	margin-bottom: 50px;
-	color: var(--title-text-color);
-}
-
 
 .client-list {
 	display: flex;
 	justify-content: center;
+
 	gap: 30px;
 }
 
-
-.client-item{
-
-}
+/* width="41" height="46.7"*/
 
 
 .client-link {
-		width: 170px;
-		height: 92px;
-display: flex;
+	width: 170px;
+	height: 92px;
+
+	display: flex;
 	justify-content: center;
 	align-items: center;
 	border: 1px solid var(--svg-color);
 	border-radius: 4px;
-	fill: var(--svg-color);
 
+fill: var(--svg-color);
 }
 
 .client-link:hover,
@@ -471,12 +468,7 @@ display: flex;
 	fill: var(--accent-color);
 }
 
-.client-svg {
-		width: 106px;
-		height: 47px;
-}
-
-
+.client-svg{}
 
 /*footer*/
 
@@ -490,7 +482,6 @@ display: flex;
 .address {
 	display: inline-flex;
 }
-
 
 
 
@@ -509,9 +500,6 @@ display: flex;
 }
 
 
-
-
-
 .footer-contacts.city {
 	color: var(--white);
 }
@@ -522,12 +510,12 @@ display: flex;
 
 
 .footer-contacts {
-	color: var(--primary-text-color);
+	color: rgba(255, 255, 255, 0.6);
 	text-decoration: none;
 	font-style: normal;
 	margin-bottom: 9px;
 	font-size: 14px;
-	line-height: 1.7;
+	line-height: 1.71;
 }
 
 .footer-contacts:hover,
@@ -541,7 +529,7 @@ display: flex;
 	display: inline-flex;
 		flex-direction: column;
 		margin-left: 70px;
-		align-content: flex-start;
+;
 }
 
 
@@ -564,7 +552,7 @@ display: flex;
 }
 
 .join-item {
-	display: inline-flex;
+	padding: 0;
 }
 
 .join-link {
