--- a/CSS/common.css
+++ b/CSS/common.css
@@ -246,7 +246,7 @@ img {
 		rgba(47, 48, 58, 0.4),
 		rgba(47, 48, 58, 0.4)
 		),
-		url('../IMG/giro/Img.png')
+		url('../IMG/giro/Img.jpg')
 }
 
 
