--- a/CSS/common.css
+++ b/CSS/common.css
@@ -468,8 +468,9 @@ fill: var(--svg-color);
 	fill: var(--accent-color);
 }
 
-.client-svg{
-	
+.client-svg {
+	width: 106px;
+	height: 60px;
 }
 
 /*footer*/
