--- a/CSS/common.css
+++ b/CSS/common.css
@@ -646,7 +646,10 @@ width: 370px;
 */
 }
 
-
+.cards-item:hover,
+.cards-item:focus {
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 /*
 .cards-item:nth-child(3n+3) {
 	margin-right: 0;
